--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
             </div>
         </div>
     </div>
-    <!-- alll boxes  -->
+    <!-- all boxes  -->
     <div class="about">
         <div class="about-content">
             <div class="about-img">
