--- a/index.html
+++ b/index.html
@@ -232,7 +232,7 @@
             <div class="footer-col">
                 <h4>Newsletter</h4>
                 <div class="flex">
-                    <form>
+                    <form class="contact">
                         <input type="email" placeholder="Your Email Address" required>
                         <button class="submit">SUBSCRIBE</button>
                     </form>
